--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
   <head>
-    <link href='stylesheet.css' rel='stylesheet' type='text/css'>
+    <link href='css/stylesheet.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
     </header>
-    <div class='field'>
+    <div class='console'>
       <div class='line1'><span class='letter active'>a</span></div>
       <div class='line2'><span class='letter'>b</span></div>
       <div class='line3'></div>
       <div class='line4'></div>
       <div class='line5'></div>
+      <div class='cmd-line'>
+        :start
+      </div>
     </div>
-    <footer>
-    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src='game.js'></script>
-    <script src='main.js'></script>
+    <script src='js/game.js'></script>
+    <script src='js/main.js'></script>
   </body>
 </html>
