--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <header>
     </header>
     <div class='console'>
-      <div class='line1'><span class='letter active'>a</span></div>
-      <div class='line2'><span class='letter'>b</span></div>
+      <div class='line1'></div>
+      <div class='line2'></div>
       <div class='line3'></div>
       <div class='line4'></div>
       <div class='line5'></div>
@@ -18,5 +18,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/game.js'></script>
     <script src='js/main.js'></script>
+    <script src='js/listeners.js'></script>
   </body>
 </html>
