--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src='js/init.js'></script>
     <script src='js/game.js'></script>
     <script src='js/main.js'></script>
     <script src='js/listeners.js'></script>
