fixed E movement and added the B movement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="UTF-8">
     <link href='css/stylesheet.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
