--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link href='css/stylesheet.css' rel='stylesheet' type='text/css'>
+    <link href='css/utility.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
@@ -13,8 +14,18 @@
       <div class='line3'></div>
       <div class='line4'></div>
       <div class='line5'></div>
-      <div class='cmd-line'>
-        :start
+      <div class='util-lines'>
+        <div class='stat-line'>
+          <span>[running-vim]</span>
+          <span class='points'>
+            <span class='score'>0</span>
+            <span class='level'>1</span>
+            <span>All </span>
+          </span>
+        </div>
+        <div class='cmd-line'>
+          :start
+        </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
