--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link href='css/stylesheet.css' rel='stylesheet' type='text/css'>
+    <link href='css/main.css' rel='stylesheet' type='text/css'>
     <link href='css/utility.css' rel='stylesheet' type='text/css'>
+    <link href='css/letters.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
     </header>
     <div class='console'>
-      <div class='line1'></div>
-      <div class='line2'></div>
-      <div class='line3'></div>
-      <div class='line4'></div>
-      <div class='line5'></div>
+      <div class='main-line line1'></div>
+      <div class='main-line line2'></div>
+      <div class='main-line line3'></div>
+      <div class='main-line line4'></div>
+      <div class='main-line line5'></div>
       <div class='util-lines'>
         <div class='stat-line'>
           <span>[running-vim]</span>
