added commands and main class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </span>
         </div>
         <div class='cmd-line'>
-          :start
+          <input type='text' class='cmd-field'>
         </div>
       </div>
     </div>
@@ -34,5 +34,6 @@
     <script src='js/game.js'></script>
     <script src='js/main.js'></script>
     <script src='js/listeners.js'></script>
+    <script src='js/commands.js'></script>
   </body>
 </html>
