updated look and fixed browser inconsistencies

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <header>
     </header>
     <div class='console'>
-      <div class='main-line line1'></div>
-      <div class='main-line line2'></div>
-      <div class='main-line line3'></div>
-      <div class='main-line line4'></div>
-      <div class='main-line line5'></div>
+      <div class='main-container'>
+        <div class='main-line line1'></div>
+        <div class='main-line line2'></div>
+        <div class='main-line line3'></div>
+        <div class='main-line line4'></div>
+        <div class='main-line line5'></div>
+      </div>
       <div class='util-lines'>
         <div class='stat-line'>
           <span>[running-vim]</span>
@@ -25,7 +27,7 @@
           </span>
         </div>
         <div class='cmd-line'>
-          <input type='text' class='cmd-field'>
+          <input type='text' class='cmd-field' disabled='disabled'>
         </div>
       </div>
     </div>
