--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div class='main-line line3'></div>
         <div class='main-line line4'></div>
         <div class='main-line line5'></div>
+        <div class='main-line line6'></div>
+        <div class='main-line line7'></div>
+        <div class='main-line line8'></div>
       </div>
       <div class='util-lines'>
         <div class='stat-line'>
