--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </div>
       </div>
     </div>
+    <div id="mute">
+      <audio id="sound">
+        <source src="music\bensound-scifi.mp3" type="audio/mpeg">
+      </audio>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/init.js'></script>
     <script src='js/game.js'></script>
