--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href='css/letters.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div id="mute">
+      <audio id="sound" autoplay loop>
+        <source src="music\bensound-scifi.mp3" type="audio/mpeg">
+      </audio>
+    </div>
     <div class='console'>
       <div class='main-container'>
         <div class='main-line line1'></div>
@@ -32,16 +37,13 @@
         </div>
       </div>
     </div>
-    <div id="mute">
-      <audio id="sound">
-        <source src="music\bensound-scifi.mp3" type="audio/mpeg">
-      </audio>
-    </div>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/init.js'></script>
     <script src='js/game.js'></script>
     <script src='js/main.js'></script>
     <script src='js/listeners.js'></script>
     <script src='js/commands.js'></script>
+    <script src='js/music.js'></script>
   </body>
 </html>
